0.5.0 (tbd)
-----------
 - Handle attributes during parsing of the response values


0.4.0 (2016-04-17)
-----------
 - Add defusedxml module for XML security issues
 - Add support for choice elements
 - Fix documentation example for complex types (Falk Schuetzenmeister)


0.3.0 (2016-04-10)
------------------
 - Correctly handle recursion in WSDL and XSD files
 - Add support for the XSD Any element
 - Allow usage of shorthand prefixes when creating elements and types
 - And more various improvements


0.2.5 (2016-04-05)
------------------
 - Temporarily disable the HTTP binding support until it works properly
 - Fix an issue with parsing SOAP responses with optional elements


0.2.4 (2016-04-03)
------------------
 - Improve xsd.DateTime, xsd.Date and xsd.Time implementations by using the
   isodate module.
 - Implement xsd.Duration 


0.2.3 (2016-04-03)
------------------
 - Fix xsd.DateTime, xsd.Date and xsd.Time implementations
 - Handle NIL values correctly for simpletypes


0.2.2 (2016-04-03)
------------------
 - Fix issue with initializing value objects (ListElements)
 - Add new `zeep.helpers.serialize_object()` method
 - Rename type attribute on value objects to `_xsd_type` to remove potential
   attribute conflicts


0.2.1 (2016-04-03)
------------------
 - Support minOccurs 0 (optional elements)
 - Automatically convert python datastructures to zeep objects for requests.
 - Set default values for new zeep objects to None / [] (Element, ListElement)
 - Add `Client.get_element()` to create custom objects


0.2.0 (2016-04-03)
------------------
 - Proper support for XSD element and attribute forms (qualified/unqualified)
 - Improved XSD handling
 - Separate bindings for Soap 1.1 and Soap 1.2
 - And again various other fixes


0.1.1 (2016-03-20)
------------------
 - Various fixes to make the HttpBinding not throw errors during parsing
 - More built-in xsd types
 - Add support for `python -mzeep <wsdl>`
 - Various other fixes


0.1.0 (2016-03-20)