@@ -1,6 +1,7 @@
 0.5.0 (tbd)
 -----------
  - Handle attributes during parsing of the response values
+ - Don't create empty soap objects when the root element is nil
 
 
 0.4.0 (2016-04-17)
